# traditional-RAG

./: .gitignore  pyproject.toml  requirements.txt
notebook/: document.ipynb  pdfLoader.ipynb
