[project]
name = "traditional-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.3.14",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.9",
    "langchain-text-splitters>=1.1.2",
    "notebook>=7.6.0",
    "pymupdf>=1.28.0",
    "pypdf>=6.14.2",
    "torch>=2.13.0",
    "tqdm>=4.69.0",
    "langchain-groq",
    "python-dotenv",
    "sentence-transformers",
    "faiss-cpu",
    "chromadb"
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
